# Aero64Reborn

./: .gitignore  .gitmodules  CMakeLists.txt  aerofightersassaul.toml  aerofightersassaul.yaml  build.bat
Docs/: SystemPrompt.md
Tools/scripts/: auto_recomp.ps1  build_elf.sh
asm/: 1000.s  header.s
asm/data/: 4C050.data.s  57D20.bss.s
config/: symbol_addrs.txt
game/: aero_config.h  aero_render.h
recomp/: funcs.h  funcs_0.c  funcs_1.c  funcs_10.c  funcs_11.c  funcs_12.c  funcs_13.c  funcs_14.c  funcs_15.c  funcs_2.c  funcs_3.c  funcs_4.c  funcs_5.c  funcs_6.c  funcs_7.c  funcs_8.c  funcs_9.c  lookup.cpp  recomp_overlays.inl
runtime/: aero_render.cpp  cop0_overrides.cpp  dummy_patches.c  main.cpp  os_patches.cpp  register_overlays.cpp
